--- a/src/index.html
+++ b/src/index.html
@@ -17,20 +17,20 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.jaredgkraemer.com/">
     <meta property="og:image" content="https://www.jaredgkraemer.com/assets/images/nature/22.jpg">
-    <meta property="og:description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high-quality photography and film.">
+    <meta property="og:description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high quality photography.">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jaredgkraemer">
     <meta name="twitter:creator" content="@jaredgkraemer">
     <meta name="twitter:title" content="Jared G. Kraemer Photography">
-    <meta name="twitter:description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high-quality photography and film.">
+    <meta name="twitter:description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high quality photography.">
     <meta name="twitter:image" content="https://www.jaredgkraemer.com/assets/images/nature/22.jpg">
 
     <link rel="icon" href="assets/graphics/camera.png">
 
-    <script src="https://use.fontawesome.com/a96e3ac54f.js"></script>
+    <script src="https://kit.fontawesome.com/c175fae80c.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
   </head>
 
   <body>
@@ -47,10 +47,10 @@
 
     Thanks for checking out my site!
     -->
-    <app-root></app-root>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <root></root>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
   </body>
 
 </html>
