--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,11 @@
 
     <script src="https://kit.fontawesome.com/c175fae80c.js"></script>
 
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
   </head>
 
   <body>
     <!--
-      DESIGNED BY
+    WEBSITE DESIGNED AND BUILT BY
 
       $$$$$$$$$$\  $$$$$$\  $$$$$$$ \ $$$$$$$\$$$$$$$\     $$$$$$$\   $$ \  $$\$$$$$$$ \  $$$$$$\  $$$$$$$\$$ \    $$\ $$$$$$$\$$$$$$$ \
       \___$$ ____|$$  __$$\ $$  __$$ |$$  ___|$$  __$$\   $$  ____|   $$ | $$ |$$  __$$ |$$  __$$\ $$  ___|$$$ \  $$$ |$$  ___|$$  __$$ |
@@ -48,9 +47,6 @@
     Thanks for checking out my site!
     -->
     <root></root>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
   </body>
 
 </html>
