updated overall design & footer placement

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,6 @@
     <meta name="twitter:image" content="https://www.jaredgkraemer.com/assets/images/nature/22.jpg">
 
     <link rel="icon" href="assets/graphics/camera.png">
-
-    <script src="https://kit.fontawesome.com/c175fae80c.js"></script>
-
   </head>
 
   <body>
@@ -46,7 +43,7 @@
 
     Thanks for checking out my site!
     -->
-    <root></root>
+    <root class="site-container"></root>
   </body>
 
 </html>
