--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <base href="/">
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Jared G Kraemer">
     <meta name="description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high quality photography.">
 
