added manifest and icons

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Jared G Kraemer">
+    <meta name="author" content="Jared G. Kraemer">
     <meta name="description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high quality photography.">
 
     <meta name="google-site-verification" content="bTYdZzUSAnJIof9cxN_E8gKN8nxshugWNWyWeV8FOg8">
@@ -26,8 +26,16 @@
     <meta name="twitter:description" content="Jared G. Kraemer Photography specializes in natural landscape, portraits, and urban architecture. Since 2008, Jared has been producing and perfecting the art of high quality photography.">
     <meta name="twitter:image" content="https://www.jaredgkraemer.com/assets/images/nature/22.jpg">
 
-    <link rel="icon" href="assets/graphics/camera.png">
-  </head>
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#ffffff">
+
+    <meta name="apple-mobile-web-app-title" content="Jared G. Kraemer Photography">
+
+    <link rel="mask-icon" href="assets/icons/camera.svg" color="#333333"> <!-- Safari Pinned Tab -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="assets/icons/camera-64x64.png">
+    <link rel="manifest" href="assets/manifest.json">
+</head>
 
   <body>
     <!--
