--- a/src/index.html
+++ b/src/index.html
@@ -31,26 +31,24 @@
 
     <meta name="apple-mobile-web-app-title" content="Jared G. Kraemer Photography">
 
-    <link rel="mask-icon" href="assets/icons/camera.svg" color="#333333"> <!-- Safari Pinned Tab -->
+    <link rel="mask-icon" href="assets/icons/camera.svg" color="#000000">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="assets/icons/camera-64x64.png">
     <link rel="manifest" href="assets/manifest.json">
 </head>
 
   <body>
-    <!--
-    WEBSITE DESIGNED AND BUILT BY
+    <!-- WEBSITE DESIGNED AND BUILT BY -->
 
-      $$$$$$$$$$\  $$$$$$\  $$$$$$$ \ $$$$$$$\$$$$$$$\     $$$$$$$\   $$ \  $$\$$$$$$$ \  $$$$$$\  $$$$$$$\$$ \    $$\ $$$$$$$\$$$$$$$ \
-      \___$$ ____|$$  __$$\ $$  __$$ |$$  ___|$$  __$$\   $$  ____|   $$ | $$ |$$  __$$ |$$  __$$\ $$  ___|$$$ \  $$$ |$$  ___|$$  __$$ |
-          $$ |    $$ /  $$ |$$ /  $$ /$$ |    $$ |  $$ |  $$ |        $$ |$$ / $$ /  $$ /$$ /  $$ |$$ |    $$$$ \$$$$ |$$ |    $$ /  $$ /
-          $$ |    $$$$$$$$ |$$$$$$$ | $$$$$$| $$ |  $$ |  $$ | $$$ |  $$$$$ |  $$$$$$$ | $$$$$$$$ |$$$$$$| $$ $$$ /$$ |$$$$$$| $$$$$$$ |
-          $$ |    $$ |  $$ |$$ | $$ \ $$ |    $$ |  $$ |  $$ | \$$ |  $$ |$$ \ $$ | $$ \ $$ |  $$ |$$ |    $$  $$/ $$ |$$ |    $$ | $$ \
-      $$$$$$ |    $$ |  $$ |$$ |  $$ |$$$$$$$\$$$$$$$$ |  $$$$$$$$ |  $$ | $$ \$$ |  $$ |$$ |  $$ |$$$$$$$\$$ |    $$ |$$$$$$$\$$ |  $$ |
-      \______|    \__|  \__|\__|  \__|\______|\_______/   \______ /   \__| \__|\__|  \__|\__|  \__|\______|\__|    \__|\______|\__|  \__|
+    <!-- $$$$$$$$$$\  $$$$$$\  $$$$$$$ \ $$$$$$$\$$$$$$$\     $$$$$$$\   $$ \  $$\$$$$$$$ \  $$$$$$\  $$$$$$$\$$ \    $$\ $$$$$$$\$$$$$$$ \ -->
+    <!-- \___$$ ____|$$  __$$\ $$  __$$ |$$  ___|$$  __$$\   $$  ____|   $$ | $$ |$$  __$$ |$$  __$$\ $$  ___|$$$ \  $$$ |$$  ___|$$  __$$ | -->
+    <!--     $$ |    $$ /  $$ |$$ /  $$ /$$ |    $$ |  $$ |  $$ |        $$ |$$ / $$ /  $$ /$$ /  $$ |$$ |    $$$$ \$$$$ |$$ |    $$ /  $$ / -->
+    <!--     $$ |    $$$$$$$$ |$$$$$$$ | $$$$$$| $$ |  $$ |  $$ | $$$ |  $$$$$ |  $$$$$$$ | $$$$$$$$ |$$$$$$| $$ $$$ /$$ |$$$$$$| $$$$$$$ | -->
+    <!--     $$ |    $$ |  $$ |$$ | $$ \ $$ |    $$ |  $$ |  $$ | \$$ |  $$ |$$ \ $$ | $$ \ $$ |  $$ |$$ |    $$  $$/ $$ |$$ |    $$ | $$ \ -->
+    <!-- $$$$$$ |    $$ |  $$ |$$ |  $$ |$$$$$$$\$$$$$$$$ |  $$$$$$$$ |  $$ | $$ \$$ |  $$ |$$ |  $$ |$$$$$$$\$$ |    $$ |$$$$$$$\$$ |  $$ | -->
+    <!-- \______|    \__|  \__|\__|  \__|\______|\_______/   \______ /   \__| \__|\__|  \__|\__|  \__|\______|\__|    \__|\______|\__|  \__| -->
 
-    Thanks for checking out my site!
-    -->
+    <!-- Thanks for checking out my site! -->
     <root class="site-container"></root>
   </body>
 
