--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
 
     <meta name="apple-mobile-web-app-title" content="Jared G. Kraemer Photography">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
     <link rel="mask-icon" href="assets/icons/camera.svg" color="#000000">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="assets/icons/camera-64x64.png">
